--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/unnamed.jpg
+    - assets/tomato-sticker-white-background/k3z9_6yiz_210608.jpg
 
 flutter_launcher_icons:
   android: true
