feat: Add backend scripts for tomato leaf disease detection model
- Implemented download_pretrained_model.py for downloading pre-trained models from Kaggle, TensorFlow Hub, and GitHub.
- Created prepare_dataset.py to download and organize the PlantVillage Tomato Dataset, including directory structure and dataset splitting.
- Developed quick_train.py for fast training using MobileNetV2, optimizing for speed and accuracy.
- Added train.py for comprehensive training using ResNet50 with transfer learning, including data augmentation and model evaluation.
- Introduced test_model.py for testing the trained model with sample images.
- Updated requirements.txt with necessary dependencies for backend functionality.
- Created setup_backend.sh for automated setup and installation of dependencies.
- Implemented start_server.sh for quick server startup with model checks.
- Enhanced user experience with detailed instructions and warnings throughout the scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# Old model files (no longer needed)
 ResNet50_best_model.keras/
