--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,8 @@
-# Backend Requirements for Tomato Leaf Disease Detection
-# Production and Training Dependencies
-
-# Core Framework
-Flask==3.1.0
-flask-cors==6.0.0
-Werkzeug==3.1.3
-
-# Machine Learning
-tensorflow==2.18.0
-numpy==1.26.4
-pillow==11.0.0
-
-# Optional: For training visualization
-matplotlib==3.9.4
-scikit-learn==1.6.1
-
-# Development
-python-dotenv==1.0.1
+flask==3.1.2
+flask-cors==6.0.1
+transformers==4.57.3
+tensorflow==2.20.0
+tf-keras==2.20.1
+torch==2.9.1
+pillow==12.0.0
+numpy==2.3.5
